config: persist and recover options safely